# StatChek

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: PlinkTests.yaml
database/: create_db.py  db_connect.py  populate_db.py
database/statchekapi_sql/: create_statchekapi.sql
plinkAPI/: README.md  pyproject.toml  tox.ini
plinkAPI/src/config/: config.py  constants.py
plinkAPI/src/database/postgres/: config.py  db_connect.py  db_populate.py
plinkAPI/src/database/postgres/statchekapi_sql/: delete_statchekapi.sql  insert_statchekapi.sql
plinkAPI/src/database/setup/: db_connect.py  db_create.py  db_populate.py
plinkAPI/src/database/setup/statchekapi_sql/: create_statchekapi.sql
plinkAPI/src/middleware/: database_utils.py
plinkAPI/src/middleware/data_adapter/: db_service.py
plinkAPI/src/routers/conferences/: constants.py  dependencies.py  router.py  schemas.py
plinkAPI/src/routers/divisions/: dependencies.py  router.py  schemas.py
plinkAPI/src/routers/players/: dependencies.py  router.py  schemas.py
plinkAPI/src/routers/teams/: dependencies.py  router.py
plinkAPI/src/routers/users/: dependencies.py  router.py  utils.py
plinkAPI/src/scripts/scraped_data/scraped_csv/team_details/: teamAllDetails.csv
plinkAPI/src/server/: app.py  auth.py  instantiate.py
plinkAPI/src/utils/: database_operations.py
plinkAPI/tests/: conftest.py  test_main.py
plinkAPI/tests/conferences/: conftest.py  test_conferences_all_data.py  test_conferences_all_id_data.py  test_conferences_id_divisions.py  test_conferences_id_teams.py  test_conferences_ids.py
plinkAPI/tests/divisions/: conftest.py  test_division_id_data.py  test_division_id_teams.py  test_divisions_all_data.py  test_divisions_all_ids.py
plinkAPI/tests/players/: conftest.py  test_players_id_data.py  test_players_name_data.py
postgres/: config.py  db_config.py  db_connect.py  db_create.py  db_helper_functions.py  db_populate.py
postgres/statchekapi_sql/: create_statchekapi.sql
sample_STATCHEK/: requirements.txt
sample_STATCHEK/db/: import.sql
sample_STATCHEK/postgres/: db_create.py
sample_STATCHEK/tests/: test_main.py
sample_STATCHEK/tests/conferences/: conftest.py  test_conferences_id_data.py  test_conferences_ids.py
src/: main.py
src/app/: auth.py  config.py  db_commands.py  db_config.py  db_connect.py  helper_functions.py  main.py
src/app.egg-info/: PKG-INFO
src/app/conferences/: dependencies.py  router.py  schemas.py
src/app/database/: database.py  db_service.py
src/app/divisions/: dependencies.py  router.py
src/app/players/: constants.py  dependencies.py  router.py
src/app/routers/: auth_config.py  conferences.py  db_api_mediation_functions.py  divisions.py  home.py  oauth2.py  players.py  schemas.py  teams.py  users.py  utils.py
src/app/teams/: constants.py  router.py
src/app/users/: dependencies.py  router.py  schemas.py  utils.py
src/conferences/: constants.py  dependencies.py  router.py
src/config/: constants.py
src/data/: database_class.py  database_conn.py  database_functions.py  database_insert.py  scraping.py
src/data/cleaned_csv/: playersAllDetailsCleaned.csv  playersAllStatsCleaned.csv  teamAllRosterDetailsCleaned.csv  teamAllStatsDetailsCleaned.csv  teamLinesAllCombinationsCleaned.csv
src/data/cleaning_datasets/: cleaning_nhl_data.ipynb  cleaning_playersDetails.ipynb  cleaning_playersStats.ipynb  cleaning_teamDetails.ipynb  cleaning_teamLineCombinations.ipynb  cleaning_teamRosters.ipynb  cleaning_teamStats.ipynb  cleaning_team_details.ipynb
src/database/: database_utils.py  db_commands.py  db_service.py
src/database/setup/: db_connect.py  db_create.py  db_populate.py
src/divisions/: constants.py  dependencies.py  router.py
src/divisions/cache/: divisions_16  divisions_17  divisions_all_data  teams_info_division_id_15  teams_info_division_id_16
src/players/: dependencies.py  router.py
src/players/cache/: rosters_player_id_8464989
src/routers/conferences/: router.py
src/scraping_data/: scraping.py
src/server/: app.py  instantiate.py
src/teams/: dependencies.py  router.py
src/users/: dependencies.py  utils.py
src/utils/: config_operations.py
tests/: conftest.py  test_main.py
tests/conferences/: conftest.py  test_conferences.py  test_conferences_all_data.py  test_conferences_all_id_data.py  test_conferences_id_data.py  test_conferences_id_divisions.py  test_conferences_id_teams.py
tests/divisions/: conftest.py  test_division_id_data.py  test_division_id_teams.py  test_divisions_all_data.py
tests/players/: test_players_id_data.py  test_players_name_data.py
(+497 files in other folders)
