[metadata]
name = app
description = api files
author = Syed Alam
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    app
install_requires =
    aiohttp==3.8.5
    aiosignal==1.3.1
    annotated-types==0.6.0
    anyio==3.7.1
    asgiref==3.7.2
    asttokens==2.4.0
    async-timeout==4.0.3
    asyncio==3.4.3
    attrs==23.1.0
    backcall==0.2.0
    bcrypt==4.0.1
    certifi==2023.7.22
    cffi==1.16.0
    charset-normalizer==3.3.0
    click==8.1.7
    colorama==0.4.6
    comm==0.1.4
    cryptography==41.0.5
    DateTime==5.2
    debugpy==1.8.0
    decorator==5.1.1
    dnspython==2.4.2
    ecdsa==0.18.0
    email-validator==2.1.0.post1
    executing==2.0.0
    fastapi==0.104.1
    frozenlist==1.4.0
    h11==0.14.0
    httpcore==0.18.0
    httptools==0.6.1
    httpx==0.25.0
    idna==3.4
    ipykernel==6.25.2
    ipython==8.16.1
    itsdangerous==2.1.2
    jedi==0.19.1
    Jinja2==3.1.2
    jupyter_client==8.3.1
    jupyter_core==5.3.2
    MarkupSafe==2.1.3
    matplotlib-inline==0.1.6
    multidict==6.0.4
    nest-asyncio==1.5.8
    numpy==1.26.0
    orjson==3.9.10
    packaging==23.2
    pandas==2.1.1
    parso==0.8.3
    passlib==1.7.4
    pickleshare==0.7.5
    platformdirs==3.11.0
    prompt-toolkit==3.0.39
    psutil==5.9.5
    psycopg==3.1.12
    psycopg-binary==3.1.12
    psycopg-pool==3.1.8
    pure-eval==0.2.2
    pyasn1==0.5.0
    pycparser==2.21
    pydantic==2.4.2
    pydantic-extra-types==2.1.0
    pydantic-settings==2.0.3
    pydantic_core==2.10.1
    Pygments==2.16.1
    pymongo==4.5.0
    python-dateutil==2.8.2
    python-dotenv==1.0.0
    python-jose==3.3.0
    python-multipart==0.0.6
    pytz==2023.3.post1
    pywin32==306
    PyYAML==6.0.1
    pyzmq==25.1.1
    requests==2.31.0
    rsa==4.9
    six==1.16.0
    sniffio==1.3.0
    stack-data==0.6.3
    starlette==0.27.0
    sync==1.0.0
    tabulate==0.9.0
    tornado==6.3.3
    traitlets==5.11.2
    typing_extensions==4.8.0
    tzdata==2023.3
    ujson==5.8.0
    urllib3==2.0.6
    uvicorn==0.23.2
    watchfiles==0.21.0
    wcwidth==0.2.8
    websockets==12.0
    yarl==1.9.2
    zope.interface==6.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

# [options.package_data]
# slapping = py.typed

# [flake8]
# max-line-length = 160